; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_teensy_hal.c_mp_hal_stdin_rx_chr.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_teensy_hal.c_mp_hal_stdin_rx_chr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pyb_stdio_uart = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_hal_stdin_rx_chr() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %22, %0
  %4 = call i64 @usb_vcp_recv_byte(i32* %2)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %3
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %24

8:                                                ; preds = %3
  %9 = load i32, i32* @pyb_stdio_uart, align 4
  %10 = call i32* @MP_STATE_PORT(i32 %9)
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = load i32, i32* @pyb_stdio_uart, align 4
  %14 = call i32* @MP_STATE_PORT(i32 %13)
  %15 = call i64 @uart_rx_any(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i32, i32* @pyb_stdio_uart, align 4
  %19 = call i32* @MP_STATE_PORT(i32 %18)
  %20 = call i32 @uart_rx_char(i32* %19)
  store i32 %20, i32* %1, align 4
  br label %24

21:                                               ; preds = %12, %8
  br label %22

22:                                               ; preds = %21
  %23 = call i32 (...) @__WFI()
  br label %3

24:                                               ; preds = %17, %6
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local i64 @usb_vcp_recv_byte(i32*) #1

declare dso_local i32* @MP_STATE_PORT(i32) #1

declare dso_local i64 @uart_rx_any(i32*) #1

declare dso_local i32 @uart_rx_char(i32*) #1

declare dso_local i32 @__WFI(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
